objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Expected_Dental_Contracts__c</fullName>
        <description>This field is used to capture the expected number of dental contracts for the opportunity.</description>
        <inlineHelpText>Expected Dental Contracts can be managed with the opportunities products. Please manage the membership of the products associated with this opportunity to update the number of Expected Dental Contracts</inlineHelpText>
        <label>Expected Dental Contracts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Dental_Members__c</fullName>
        <description>This field is used to capture the expected number of dental members for the opportunity.</description>
        <inlineHelpText>Expected Dental Members can be managed with the opportunities products. Please manage the membership of the products associated with this opportunity to update the number of Expected Dental Members</inlineHelpText>
        <label>Expected Dental Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Dental_members_Lex__c</fullName>
        <label>Expected Dental Members</label>
        <summarizedField>Opportunity_Product__c.Projected_Members__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity_Product__c.Category__c</field>
            <operation>equals</operation>
            <value>Dental</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Product__c.Opportunity_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Expected_Health_Contracts_Lex__c</fullName>
        <label>Expected Health Contracts</label>
        <summarizedField>Opportunity_Product__c.Projected_Contracts__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity_Product__c.Category__c</field>
            <operation>equals</operation>
            <value>Medical, Medicare</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Product__c.Opportunity_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Expected_Health_Contracts__c</fullName>
        <description>This field is used to capture the expected number of health contracts for the opportunity.</description>
        <inlineHelpText>Expected Health Contracts can be managed with the opportunities products. Please manage the membership of the products associated with this opportunity to update the number of Expected Health Contracts</inlineHelpText>
        <label>Expected Health Contracts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Health_Members_Lex__c</fullName>
        <label>Expected Health Members</label>
        <summarizedField>Opportunity_Product__c.Projected_Members__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity_Product__c.Category__c</field>
            <operation>equals</operation>
            <value>Medical, Medicare</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Product__c.Opportunity_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Expected_Health_Members__c</fullName>
        <description>This field is used to capture the expected number of health members for the opportunity.</description>
        <inlineHelpText>Expected Health Members can be managed with the opportunities products. Please manage the membership of the products associated with this opportunity to update the number of Expected Health Members</inlineHelpText>
        <label>Expected Health Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_RFP_Release_Date__c</fullName>
        <description>This field is used to capture the expected date an RFI or RFP will be received.</description>
        <label>Expected In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>This field is used to capture the External ID of the record from Source System.</description>
        <externalId>true</externalId>
        <label>Opportunity Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FIPS_Code__c</fullName>
        <label>FIPS Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSU_Location__c</fullName>
        <description>This field is used to capture the FSU Location of the Account associated to the Opportunity.</description>
        <label>Service Center Location</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HCSC_Division__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Abilene</fullName>
                </value>
                <value>
                    <fullName>Albuquerque</fullName>
                </value>
                <value>
                    <fullName>Amarillo</fullName>
                </value>
                <value>
                    <fullName>Belleville</fullName>
                </value>
                <value>
                    <fullName>Champaign</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Danville</fullName>
                </value>
                <value>
                    <fullName>Great Falls</fullName>
                </value>
                <value>
                    <fullName>Helena</fullName>
                </value>
                <value>
                    <fullName>Houston</fullName>
                </value>
                <value>
                    <fullName>Jacksonville</fullName>
                </value>
                <value>
                    <fullName>Marion</fullName>
                </value>
                <value>
                    <fullName>Marshall</fullName>
                </value>
                <value>
                    <fullName>Mattoon</fullName>
                </value>
                <value>
                    <fullName>Naperville</fullName>
                </value>
                <value>
                    <fullName>Oklahoma City</fullName>
                </value>
                <value>
                    <fullName>Palestine</fullName>
                </value>
                <value>
                    <fullName>Quincy</fullName>
                </value>
                <value>
                    <fullName>Richardson</fullName>
                </value>
                <value>
                    <fullName>Rockford</fullName>
                </value>
                <value>
                    <fullName>San Angelo</fullName>
                </value>
                <value>
                    <fullName>Springfield</fullName>
                </value>
                <value>
                    <fullName>Tulsa</fullName>
                </value>
                <value>
                    <fullName>Waco</fullName>
                </value>
                <value>
                    <fullName>Wichita Falls</fullName>
                </value>
                <value>
                    <fullName>Other (specify)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Final_Comments__c</fullName>
        <label>Final Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Final_Renewal_Exhibit__c</fullName>
        <label>Final Renewal Exhibit</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Finalist_Meeting__c</fullName>
        <description>This field is used to capture the date of the finalist meeting related to the opportunity.</description>
        <label>Finalist Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finalist_Named__c</fullName>
        <description>This field is used to capture the date when the finalists for the opportunity were named.</description>
        <label>Finalist Named</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finalist__c</fullName>
        <description>This field is used to capture if HCSC was selected as a finalist for the opportunity.</description>
        <label>Finalist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Undecided</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Forecast_Segment__c</fullName>
        <description>The forecast segment value indicator. This is based off of details on the opportunity, such as District or Market Segment.</description>
        <label>Forecast Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ENA</fullName>
                </value>
                <value>
                    <fullName>Small Group</fullName>
                </value>
                <value>
                    <fullName>Labor</fullName>
                </value>
                <value>
                    <fullName>Large Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Full_Product_Count__c</fullName>
        <label>Full Product Count</label>
        <summaryForeignKey>Opportunity_Product__c.Opportunity_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <label>Funding Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PREM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gate</label>
        <referenceTo>Actuary_Gate__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_Medicare_Plan__c</fullName>
        <description>This field is used to capture the type of Medicare benefits proposed as part of the opportunity</description>
        <inlineHelpText>Type of Medicare benefits the group offers</inlineHelpText>
        <label>Group Medicare Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Medicare Advantage</fullName>
                </value>
                <value>
                    <fullName>Medicare Advantage Part D</fullName>
                </value>
                <value>
                    <fullName>Medicare Supplement</fullName>
                </value>
                <value>
                    <fullName>Medicare Supplement PDP</fullName>
                </value>
                <value>
                    <fullName>PDP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Medicare__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture if Group Medicare is included in the opportunity</description>
        <inlineHelpText>Whether a group is offering Group Medicare</inlineHelpText>
        <label>Group Medicare</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HCM_Client_Intensity__c</fullName>
        <description>This field is used to capture the rating assigned by HCM, derived from the complexity and time involved for the HCM RFP responses</description>
        <label>HCM Client Intensity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HCM_Program_Model__c</fullName>
        <description>This field is used to capture the Health Care Management program proposed as part of the opportunity</description>
        <inlineHelpText>Health Care Management program the group is interested in purchasing</inlineHelpText>
        <label>HCM Program Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BCC Standard</fullName>
                </value>
                <value>
                    <fullName>BCC Enhanced</fullName>
                </value>
                <value>
                    <fullName>BCC Elite</fullName>
                </value>
                <value>
                    <fullName>MHA</fullName>
                </value>
                <value>
                    <fullName>Primary Nurse 1</fullName>
                </value>
                <value>
                    <fullName>Primary Nurse 2</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HCM_Response_Submitted_Date__c</fullName>
        <description>This field is used to capture the date the HCM portion of the RFP response is submitted</description>
        <label>HCM Response Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HCSC_Division__c</fullName>
        <description>This field is used to capture the HCSC State of the Account associated to the Opportunity.</description>
        <label>HCSC Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>TX</fullName>
                </value>
                <value>
                    <fullName>NM</fullName>
                </value>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Notes__c</fullName>
        <formula>IF( Total_Number_of_Notes__c &gt; 0, &apos;Y&apos;, &apos;N&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notes?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Health_Count__c</fullName>
        <description># of Subscribers enrolled for Health(does not include members count)</description>
        <label>Health Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Health_Tier_Number__c</fullName>
        <label>Health Tier Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ifchecked_rating__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Bankend field to check if change happening from UI or not</description>
        <label>Ifchecked_rating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incumbent__c</fullName>
        <label>Incumbent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Carrier</fullName>
                </value>
                <value>
                    <fullName>Cigna</fullName>
                </value>
                <value>
                    <fullName>UHC</fullName>
                </value>
                <value>
                    <fullName>Aetna</fullName>
                </value>
                <value>
                    <fullName>Humana</fullName>
                </value>
                <value>
                    <fullName>PUG</fullName>
                </value>
                <value>
                    <fullName>TPA</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Comments__c</fullName>
        <label>Initial Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsAutoCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is checked and used in the auto create renewal trigger.</description>
        <label>IsAutoCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kick_Off_Date__c</fullName>
        <description>This field is used to capture the date sales and account management teams start strategizing and planning for responding to an RFP/RFI</description>
        <label>Kick Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Medicare_Primary__c</fullName>
        <label>Medicare Primary</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Membership_Gain_Loss_Probability__c</fullName>
        <description>This field is used to capture the probability that members will be gained or lost as part of the renewal</description>
        <label>Membership Gain/Loss Probability (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Migration_Source__c</fullName>
        <description>This field is used to capture the migration source used during migrations.</description>
        <label>Migration Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_additional_information__c</fullName>
        <description>This field is used to capture additional migration information.</description>
        <label>Migration additional information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Missed_Last_Week__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate whether or not the Opportunity was missed during the previous week.</description>
        <label>Missed Last Week?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nexus_Information__c</fullName>
        <description>This field is used to capture results from Nexus for Group Medicare</description>
        <inlineHelpText>Results from Nexus</inlineHelpText>
        <label>Nexus Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Non_Admin_Last_Modified_Date__c</fullName>
        <label>Non Admin Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_Of_Misses__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of times this opportunity has been missed, meaning it was not updated within a week&apos;s timeframe</description>
        <label>Number Of Misses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opp_Prod_Prob__c</fullName>
        <label>Opp Prod Prob</label>
        <summaryFilterItems>
            <field>Opportunity_Product__c.Win_Probability__c</field>
            <operation>lessThan</operation>
            <value>50</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity_Product__c.Category__c</field>
            <operation>equals</operation>
            <value>Medical</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Product__c.Opportunity_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity_Case_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Case Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Due_Date_Notification_Date__c</fullName>
        <description>This field is used to calculate the date on which the due date notification should be sent to the opportunity owner</description>
        <formula>CloseDate -  Due_Date_Notification_in_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Due Date Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <displayFormat>S{00000000}</displayFormat>
        <externalId>true</externalId>
        <label>Opportunity Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type_Copy__c</fullName>
        <label>Opportunity Type Copy</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_FSU_Location__c</fullName>
        <description>This field is used to capture the FSU site if it is not included in the FSU Location dropdown.</description>
        <inlineHelpText>FSU City that is not included in FSU Location dropdown</inlineHelpText>
        <label>Other Service Center Location</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_HCM_Information__c</fullName>
        <description>This field is used to capture other information related to HCM (e.g., if &quot;Other&quot; is selected in HCM Program Model, custom staffing ratios)</description>
        <inlineHelpText>Text field to enter other information related to HCM (e.g., if &quot;Other&quot; is selected in HCM Program Type or HCM Program Model, custon staffing ratios)</inlineHelpText>
        <label>Other HCM Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Incumbent__c</fullName>
        <label>Other Incumbent</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Our_Strategy_Response__c</fullName>
        <description>This field is used to capture the strategy to win an opportunity.</description>
        <label>Our Strategy/Response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner_of_Record__c</fullName>
        <description>This field is used to capture if the current logged in user is the owner of the opportunity.</description>
        <formula>$User.Id = OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner of Record?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_s_Manager_Name__c</fullName>
        <description>This field is used to capture the name of the opportunity owner&apos;s manager.</description>
        <formula>Owner.Manager.FirstName + &quot; &quot; + Owner.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner&apos;s Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to capture the Parent Opportunity to relate other opportunities pursuing the same RFP.</description>
        <label>Parent Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Child Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Perceived_Vulnerabilities_Threats__c</fullName>
        <description>This field is used to capture perceived vulnerabilities and threats for a renewal.</description>
        <label>Perceived Vulnerabilities/Threats</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Plan_Change_Needed__c</fullName>
        <label>Plan Change Needed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Playbook__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is used to capture the playbook associated to the opportunity</description>
        <label>Playbook</label>
        <referenceTo>Playbook__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Closed_Reason__c</fullName>
        <description>This field is used to capture the primary reason why an Opportunity is won, lost or declined.</description>
        <label>Primary Closed Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Absorbed by Parent Group</fullName>
                </value>
                <value>
                    <fullName>Change of Ownership</fullName>
                </value>
                <value>
                    <fullName>Consol. Covg with 1 Carrier</fullName>
                </value>
                <value>
                    <fullName>Headquarters Relocated</fullName>
                </value>
                <value>
                    <fullName>Lack of Narrow Network</fullName>
                </value>
                <value>
                    <fullName>Market Check by Group</fullName>
                </value>
                <value>
                    <fullName>Organizational Changes</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Performance Guarantees</fullName>
                </value>
                <value>
                    <fullName>Plan Design-Other</fullName>
                </value>
                <value>
                    <fullName>Political</fullName>
                </value>
                <value>
                    <fullName>Purchase by Another Company</fullName>
                </value>
                <value>
                    <fullName>Rates-Aggregate Stop Loss-Claim/Attch Factor</fullName>
                </value>
                <value>
                    <fullName>Rates-Incumbent Reduced</fullName>
                </value>
                <value>
                    <fullName>Rates-Individual Stop Loss</fullName>
                </value>
                <value>
                    <fullName>Rates-Insured</fullName>
                </value>
                <value>
                    <fullName>Repricing</fullName>
                </value>
                <value>
                    <fullName>Reputation of Selected Carrier</fullName>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Wellness</fullName>
                </value>
                <value>
                    <fullName>Broker Relationship</fullName>
                </value>
                <value>
                    <fullName>Changed Brokers</fullName>
                </value>
                <value>
                    <fullName>Network Discounts</fullName>
                </value>
                <value>
                    <fullName>Network Disruption</fullName>
                </value>
                <value>
                    <fullName>Product Packaging</fullName>
                </value>
                <value>
                    <fullName>Did Not Want to Disrupt Ees</fullName>
                </value>
                <value>
                    <fullName>Not Enough Diff. to Change</fullName>
                </value>
                <value>
                    <fullName>PUG Did not meet participation</fullName>
                </value>
                <value>
                    <fullName>Rates-Admin. Charge too High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Private_Exchange_Blue_Directions_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Private Exchange Blue Directions Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Private_Exchange_External_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Private Exchange External Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Producer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Producer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Count__c</fullName>
        <label>Product Count</label>
        <summaryFilterItems>
            <field>Opportunity_Product__c.Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity_Product__c.Category__c</field>
            <operation>equals</operation>
            <value>Medical</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Product__c.Opportunity_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Product_Members__c</fullName>
        <label>Product Members</label>
        <summarizedField>Opportunity_Product__c.Projected_Members__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity_Product__c.Category__c</field>
            <operation>equals</operation>
            <value>Medical</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity_Product__c.Status__c</field>
            <operation>equals</operation>
            <value>In Progress, Won</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity_Product__c.Product_Type__c</field>
            <operation>equals</operation>
            <value>Add-On Gain, Add-On Loss, New Sale, Renewal</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Product__c.Opportunity_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HDV</fullName>
                </value>
                <value>
                    <fullName>HD</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to capture the product related to the child opportunity.</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Projected_Membership_Gain_Loss__c</fullName>
        <description>This field is used to capture the number of members projected to be gained or lost as part of the renewal</description>
        <label>Projected Membership Gain/Loss</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>